# lever

./: .gitignore  README.md
.github/workflows/: pr-build.yml  release.yml
docs/superpowers/plans/: 2026-04-10-react-migration.md  2026-04-14-worktree-feature.md  2026-04-17-repo-path-export-and-edit.md
docs/superpowers/specs/: 2026-04-10-react-migration-design.md  2026-04-14-worktree-feature-design.md  2026-04-17-repo-path-export-and-edit-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.module.css  App.tsx  global.css
ui/src/components/: Icons.tsx
ui/src/components/MainPanel/: Divider.module.css  Divider.tsx  GitPanel.module.css  GitPanel.tsx  LogOverlay.module.css  LogOverlay.tsx  MainPanel.module.css  MainPanel.tsx  PaneView.module.css  PaneView.tsx  TabBar.module.css  TabBar.tsx  TerminalView.module.css  TerminalView.tsx  WorkspaceBar.module.css  WorkspaceBar.tsx
ui/src/components/Modals/: ConfigModal.module.css  ConfigModal.tsx  NewWorktreeModal.module.css  NewWorktreeModal.tsx  WorktreeConfigModal.tsx
ui/src/components/Sidebar/: GroupItem.tsx  (+7 more)
ui/src/hooks/: useAgentActivity.ts  useDisableTextAssist.ts  useKeyboardShortcuts.ts  usePty.ts  useTauriEvent.ts
ui/src/lib/: paneTree.ts  tauri.ts
ui/src/stores/: configStore.ts  gitStore.ts  serviceStore.ts  terminalStore.ts  themeStore.ts  workspaceStore.ts  worktreeStore.ts
ui/src/types/: index.ts  pane.ts
(+6 files in other folders)
