[package]
name = "lever"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
portable-pty = "0.8"
git2 = "0.19"

[build-dependencies]
tauri-build = { version = "2", features = [] }
